--- a/src/main/webapp/modules/upms/main.html
+++ b/src/main/webapp/modules/upms/main.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <link rel="stylesheet" href="../../js/jquery-easyui/themes/default/easyui.css">
-    <script src="../../js/jquery-3.1.1.js"></script>
-    <script src="../../js/jquery-easyui/jquery.easyui.min.js"></script>
-
+    <!--<script src="../../upmsapi?action=Template-commonLibs">
+    </script>
+    -->
+    <script src="jslib/main-lib.js"></script>
 
     <style type="text/css">
+
         .header-tool {
             margin-top: 18px;
             margin-right: 20px;
@@ -42,7 +44,6 @@
             text-decoration: none;
         }
     </style>
-
 
     <script type="text/javascript">
 
@@ -95,18 +96,6 @@
 
             $tabsCenter = $('#tabsCenter');
 
-            @*jQuery("#treeMenu").tree({
-                url: '@Url.Content("~/Main/GetMenus")',
-                //loadFilter: function (rows) {
-                //    return convert(rows);
-                //},
-                onDblClick: function (node) {
-                    addTab(node.text, node.attributes.url);
-                }
-            });*@
-
-
-
             $tabsCenter.tabs({
                 border: false,
                 onSelect: function (title) {
@@ -124,7 +113,7 @@
                 $tabsCenter.tabs('select', title);
             } else {
 
-                var fullUrl = '@Url.Content("~")' + url;
+                var fullUrl =  url;
                 var content = '<div style="height:100%;overflow-y:hidden;">'
                     + '<iframe scrolling="auto" frameborder="0"  src="' + fullUrl
                     + '" style="width:100%;height:100%;"></iframe></div>';
@@ -150,6 +139,7 @@
 
 
 </head>
+
 <body  class="easyui-layout" fit="true">
 
 <div data-options="region:'north'" style="height: 50px; background-color: #20375f; padding-left:10px;padding-right:20px; ">
@@ -162,20 +152,22 @@
         </span>
     </div>
 </div>
+
 <div data-options="region:'west',split:true" title="菜单导航" style="width:200px;overflow-y:hidden;">
 
     <div class="easyui-accordion" style="width:100%" border="false">
 
-        <div title="ttt" style="overflow:auto;padding:5px;border:0px;">
+        <div title="系统管理" style="overflow:auto;padding:5px;border:0px;">
             <ul class="easyui-tree">
                 <li>
-                    <a href="javascript:void(0)" onclick="addTab(' ',' ')">aa</a>
+                    <a href="javascript:void(0)" onclick="addTab('用户管理 ','./user/user_list.html ')">用户管理</a>
                 </li>
             </ul>
         </div>
     </div>
 
 </div>
+
 <div data-options="region:'center'">
     <div id="tabsCenter" class="easyui-tabs" fit="true" plain="true">
         <div title="主页">
@@ -183,5 +175,6 @@
         </div>
     </div>
 </div>
+
 </body>
 </html>
