--- a/src/main/webapp/modules/upms/main.html
+++ b/src/main/webapp/modules/upms/main.html
@@ -8,7 +8,7 @@
     <!--<script src="../../upmsapi?action=Template-commonLibs">
     </script>
     -->
-    <script src="js/main-lib.js"></script>
+    <script src="js/main_ref.js"></script>
 
     <style type="text/css">
 
