--- a/src/main/webapp/modules/upms/user/user_list.html
+++ b/src/main/webapp/modules/upms/user/user_list.html
@@ -9,10 +9,10 @@
     <script type="text/javascript">
 
         jQuery(function () {
-            f_search();
+            doSearch();
         });
 
-        function f_search() {
+        function doSearch() {
 
 		    var url=$("#dg").attr("url_");
 		    
@@ -58,7 +58,7 @@
                 <option value="M">男</option>
                 <option value="F">女</option>
             </select>
-            <a href="javascript:void(0);" onclick="f_search();" class="easyui-linkbutton" iconcls="icon-search">查询</a>
+            <a href="javascript:void(0);" onclick="doSearch();" class="easyui-linkbutton" iconcls="icon-search">查询</a>
         </form>
     </div>
 </div>
