--- a/src/main/webapp/modules/upms/user/user_list.html
+++ b/src/main/webapp/modules/upms/user/user_list.html
@@ -16,7 +16,7 @@
             $dg=$("#dg");
             $dg.datagrid("options").url=$dg.attr("url_");
 			var dgFormData = $(document.forms["dg-form"]).serialize();
-			$("#dg").datagrid("reload",{param:dgFormData});
+			$dg.datagrid("reload",{param:dgFormData});
 		}
 
 		function openAdd() {
