--- a/src/main/webapp/modules/upms/user/user_list.html
+++ b/src/main/webapp/modules/upms/user/user_list.html
@@ -69,33 +69,10 @@
     </div>
 </div>
 
-<div style="display:none;">
 
-    <div id="dlg1">
-    </div>
-
-    <div id="dlgButtonSaveCancel">
-        <table cellpadding="0" cellspacing="0" style="width:100%">
-            <tr>
-                <td style="text-align:right">
-                    <a href="#" class="easyui-linkbutton" iconcls="icon-save" onclick="dlgSave()">保存</a>
-                    <a href="#" class="easyui-linkbutton" iconcls="icon-cancel" onclick="javascript: f_closeDialog()">取消</a>
-                </td>
-            </tr>
-        </table>
-    </div>
-
-    <div id="dlgButtonOKCancel">
-        <table cellpadding="0" cellspacing="0" style="width:100%">
-            <tr>
-                <td style="text-align:right">
-                    <a href="#" class="easyui-linkbutton" iconcls="icon-save" onclick="dlgOK()">确定</a>
-                    <a href="#" class="easyui-linkbutton" iconcls="icon-cancel" onclick="javascript: f_closeDialog()">取消</a>
-                </td>
-            </tr>
-        </table>
-    </div>
-</div>
+<script>
+    f_includeHtmlFile("/commons/dialog_part.html");
+</script>
 
 </body>
 
