--- a/src/main/webapp/modules/upms/user/user_list.html
+++ b/src/main/webapp/modules/upms/user/user_list.html
@@ -6,9 +6,11 @@
 
     <script src="../js/main_tab_ref.js"></script>
 
+
     <script type="text/javascript">
 
         jQuery(function () {
+            f_initDatagrid();
             f_searchDatagrid();
         });
 
