--- a/src/main/webapp/modules/upms/user/user_list.html
+++ b/src/main/webapp/modules/upms/user/user_list.html
@@ -4,8 +4,7 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 
-    <script src="../js/main_tab_ref.js"></script>
-
+    <script src="../../../js/ref/main_tab_ref.js"></script>
 
     <script type="text/javascript">
 
