--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -8,7 +8,8 @@
     <!--<script src="../../upmsapi?action=Template-commonLibs">
     </script>
     -->
-    <script src="js/main_ref.js"></script>
+
+    <script src="js/ref/main_ref.js"></script>
 
     <style type="text/css">
 
@@ -137,7 +138,6 @@
 
     </script>
 
-
 </head>
 
 <body  class="easyui-layout" fit="true">
@@ -160,7 +160,7 @@
         <div title="系统管理" style="overflow:auto;padding:5px;border:0px;">
             <ul class="easyui-tree">
                 <li>
-                    <a href="javascript:void(0)" onclick="addTab('用户管理 ','./user/user_list.html ')">用户管理</a>
+                    <a href="javascript:void(0)" onclick="addTab('用户管理 ','modules/upms/user/user_list.html ')">用户管理</a>
                 </li>
             </ul>
         </div>
