--- a/src/main/webapp/modules/upms/user/user_list.html
+++ b/src/main/webapp/modules/upms/user/user_list.html
@@ -15,7 +15,7 @@
 
 		function openAdd(id) {
             url="user_edit.html";
-            f_openDialog(url);
+            f_openDialog(url,{});
         }
 
         function openEdit() {
