--- a/src/main/webapp/modules/upms/commons/dialog_part.html
+++ b/src/main/webapp/modules/upms/commons/dialog_part.html
@@ -7,7 +7,7 @@
         <table cellpadding="0" cellspacing="0" style="width:100%">
             <tr>
                 <td style="text-align:right">
-                    <a href="#" class="easyui-linkbutton" iconcls="icon-save" onclick="dlgSave()">保存</a>
+                    <a href="#" class="easyui-linkbutton" iconcls="icon-save" onclick="javascript: dlgSave()">保存</a>
                     <a href="#" class="easyui-linkbutton" iconcls="icon-cancel" onclick="javascript: f_closeDialog()">取消</a>
                 </td>
             </tr>
@@ -18,7 +18,7 @@
         <table cellpadding="0" cellspacing="0" style="width:100%">
             <tr>
                 <td style="text-align:right">
-                    <a href="#" class="easyui-linkbutton" iconcls="icon-save" onclick="dlgOK()">确定</a>
+                    <a href="#" class="easyui-linkbutton" iconcls="icon-save" onclick="javascript: dlgOK()">确定</a>
                     <a href="#" class="easyui-linkbutton" iconcls="icon-cancel" onclick="javascript: f_closeDialog()">取消</a>
                 </td>
             </tr>
