--- a/src/main/webapp/modules/upms/user/user_edit.html
+++ b/src/main/webapp/modules/upms/user/user_edit.html
@@ -3,8 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
 </head>
 <body>
-    用户编辑
+
+
+<form id="dlg-form" method="post">
+
+    <table>
+        <tr>
+            <td>帐号</td>
+
+            <td>
+                <input class="easyui-textbox" type="text" name="loginId" data-options="required:true"></input>
+            </td>
+        </tr>
+    </table>
+
+</form>
+
+
+    <script>
+        function dlgSave() {
+
+        }
+    </script>
 </body>
 </html>
